style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  background-color: #f5f5f5;
  width: 100%;
  height: 100vh;
}

main {
  display: grid;
  grid-template-columns: auto;
  width: 100%;
  height: 100vh;
  background-color: #fff;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

label {
  display: none;
}

.nav-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  top: 1rem;
  background-color: #ffff;
}

.nav-menu {
  display: none;
}

.nameLogo {
  margin-left: 1.5rem;
  width: 76px;
  height: 20px;
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 20px;
  color: #5564eb;
  margin-top: 1rem;
}

.bar {
  display: block;
  width: 20px;
  margin: 3px auto;
  height: 5px;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: #6070ff;
}

.intro {
  margin: 0;
  max-width: 30.5rem;
  padding: 1.45rem 1.0875rem;
  background: url('./assets/images/mobile-bg.svg') 0 50px no-repeat;
  background-size: 100% auto;
  height: 750px;
  background-color: #fff;
}

.text-container {
  display: flex;
  flex-direction: column;
  margin-top: 7rem;
}

.primary-text {
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 2.625rem;
  line-height: 3.25rem;
  color: #172b4d;
  align-items: center;
  width: 18rem;
}

.line-break {
  height: 1rem;
}

.secondary-text {
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
  border: 1px solid rgb(252, 252, 252);
}

.link-text {
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 1.2rem;
  color: #4d5bd9;
}

.social-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  gap: 1.2rem;
  margin-top: 1rem;
  padding-left: 1rem;
}

.card-separator {
  height: 3rem;
}

.main-workContainer {
  display: grid;
  grid-template-columns: auto;
  background-color: #f5f5f5;
  margin: 50px 0;
  align-items: center;
  top: 718px;
  padding: 1em;
  gap: 88px;
}

.work-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  max-width: 30.5rem;
  margin-left: 10px;
  margin-right: 11px;
  background-color: #ffff;
  border-radius: 16px;
}

.projesct-one-img {
  padding-top: 1rem;
  width: 320px;
}

.card-section-1 {
  margin-left: 1rem;
}

.image-dektop {
  display: none;
}

.projectone-header {
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 44px;
  color: #172b4d;
  width: 9rem;
  margin-top: 1rem;
}

.project-one-header-desktop {
  display: none;
}

.projectone-header1 {
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  font-weight: bolder;
  font-size: 1.5rem;
  line-height: 44px;
  color: #172b4d;
  width: 13rem;
  margin-top: 1rem;
}

.project-two-header-desktop {
  display: none;
}

.project-details {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 0.5rem;
  margin-top: 1rem;
}

.project-details-desktop {
  display: none;
}

.project-headings {
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  font-weight: 700;
  font-size: 1rem;
  color: #172b4d;
}

.project-text > p {
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.8rem;
  color: #344563;
  margin-top: 1rem;
}

.project-text-desktop {
  display: none;
}

.project-program-laguages {
  display: flex;
  align-items: center;
  gap: 1rem;
  margin-top: 1rem;
  padding-right: 2rem;
}

.project-program-laguage-desktop {
  display: none;
}

.program-language {
  background: #ebebff;
  border-radius: 8px;
  align-items: center;
  padding: 4px 12px;
  text-align: center;
  width: 20%;
  font: 1rem;
  color: #5564eb;
}

.program-language-javascript {
  background: #ebebff;
  border-radius: 8px;
  align-items: center;
  text-align: center;
  width: 40%;
  height: 2rem;
  font: 15rem;
  color: #5564eb;
}

.call-to-action {
  margin-top: 1.5rem;
  border: 2px solid #5564eb;
  border-radius: 8px;
  color: #396df2;
  text-align: center;
  justify-content: center;
  font-size: 1rem;
  padding: 1rem;
  width: 8rem;
  background-color: #fff;
  margin-bottom: 2rem;
}

.call-action-resume {
  margin-top: 1.5rem;
  border: 2px solid #5564eb;
  border-radius: 8px;
  color: #396df2;
  text-align: center;
  justify-content: center;
  font-size: 1rem;
  padding: 1rem;
  background-color: #fff;
  margin-bottom: 2rem;
  width: 10rem;
}

button:hover {
  background-color: #5564eb;
  color: #fff;
  box-shadow: 0 8px 16px 0 #dfe1e6;
}

button:active {
  background-color: #2230d2;
  color: #fff;
}

button :disabled {
  background-color: #fff;
  color: #5e6c84;
}

.about-me-container {
  display: flex;
  flex-direction: column;
  border-top-right-radius: 150px;
  padding-left: 2rem;
  background-color: #ffff;
  max-width: 30.5rem;
}

.text-container-about {
  margin-top: 100px;
  width: 20rem;
}

.primary-text-about {
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  font-weight: 700;
  color: #172b4d;
  margin-top: -1rem;
  width: 11rem;
}

.language {
  display: flex;
  justify-content: space-between;
  margin-top: 1rem;
  width: 18rem;
}

.language h2 {
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 1.5rem;
  color: black;
}

.language > img {
  color: blue;
  cursor: pointer;
  margin-right: 1rem;
}

.language-snippets-container {
  margin-top: 2rem;
}

.language-snippets {
  display: flex;
  width: 20rem;
  align-items: center;
  margin-top: 1rem;
  background: #f7f7f9;
  border-radius: 8px;
}

.language-snippets > li {
  margin-left: 1rem;
}
/* ... */

